feat: Unused methods commented out 02.